--- a/server/package.json
+++ b/server/package.json
@@ -4,7 +4,8 @@
   "description": "Restful server to make orders",
   "main": "index.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "test": "echo \"Error: no test specified\" && exit 1",
+    "start": "nodemon ./index.js"
   },
   "author": "Stoyan.V",
   "license": "ISC",
@@ -12,5 +13,8 @@
     "bcrypt": "^5.0.1",
     "express": "^4.17.2",
     "mongoose": "^6.1.2"
+  },
+  "devDependencies": {
+    "nodemon": "^2.0.15"
   }
 }
